[gd_scene load_steps=15 format=3 uid="uid://3xynvu782kcm"]

[ext_resource type="Script" path="res://Script/Game/World.gd" id="1_myfhc"]
[ext_resource type="Script" path="res://Script/Game/Debuger.gd" id="2_84kal"]
[ext_resource type="TileSet" uid="uid://dpd3kgnq8k7b6" path="res://Assets/Maps/Tiled/World.tres" id="2_hfpdn"]
[ext_resource type="PackedScene" uid="uid://v51c0x6v6m7h" path="res://Scene/Perfabs/PlayabelCharacter/Player.tscn" id="2_l5a8p"]
[ext_resource type="PackedScene" uid="uid://c4juornnas0vu" path="res://Scene/Perfabs/Maps/GameMap/Forest1.tscn" id="2_w00fx"]
[ext_resource type="Script" path="res://Script/Game/EnemyHome.gd" id="4_22mer"]
[ext_resource type="PackedScene" uid="uid://dlpspce2dr6hw" path="res://Scene/Perfabs/Maps/RelifePoint.tscn" id="4_f4kq8"]
[ext_resource type="PackedScene" uid="uid://bjqtnyo6c546w" path="res://Scene/UI/Hud.tscn" id="5_07fkt"]
[ext_resource type="PackedScene" uid="uid://dx27klpp0nc4x" path="res://Scene/Perfabs/NonPlayCharacter/Enemy.tscn" id="5_t1ymi"]
[ext_resource type="Script" path="res://Script/Perfabs/Others/SaveTimer.gd" id="9_v08bh"]
[ext_resource type="Script" path="res://Script/Perfabs/Maps/MapBoundary.gd" id="10_5aanf"]

[sub_resource type="Environment" id="Environment_iavjm"]
background_mode = 3
glow_enabled = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6qxva"]
size = Vector2(15220.5, 381)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m7j67"]
size = Vector2(428, 5206)

[node name="World" type="Node2D"]
script = ExtResource("1_myfhc")
save = true
load_save = true

[node name="TheWorld" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Forest1" parent="TheWorld" instance=ExtResource("2_w00fx")]

[node name="TileMap" type="TileMap" parent="."]
visible = false
tile_set = ExtResource("2_hfpdn")
rendering_quadrant_size = 128
format = 2
layer_0/name = "Gound"
layer_0/tile_data = PackedInt32Array(65513, 327682, 7, 131049, 327682, 7, 196585, 327682, 7, 262121, 327682, 7, 327657, 327682, 7, 393193, 327682, 7, 458729, 327682, 7, 524265, 327682, 7, 589801, 327682, 7, 65514, 327682, 7, 131050, 327682, 7, 196586, 327682, 7, 262122, 327682, 7, 327658, 327682, 7, 393194, 327682, 7, 458730, 327682, 7, 524266, 327682, 7, 589802, 327682, 7, 65515, 327682, 7, 131051, 327682, 7, 196587, 327682, 7, 262123, 327682, 7, 327659, 327682, 7, 393195, 327682, 7, 458731, 327682, 7, 524267, 327682, 7, 589803, 327682, 7, 65516, 327682, 7, 131052, 327682, 7, 196588, 327682, 7, 262124, 327682, 7, 327660, 327682, 7, 393196, 327682, 7, 458732, 327682, 7, 524268, 327682, 7, 589804, 327682, 7, 65517, 327682, 7, 131053, 327682, 7, 196589, 327682, 7, 262125, 327682, 7, 327661, 327682, 7, 393197, 327682, 7, 458733, 327682, 7, 524269, 327682, 7, 589805, 327682, 7, 65518, 327682, 7, 131054, 327682, 7, 196590, 327682, 7, 262126, 327682, 7, 327662, 327682, 7, 393198, 327682, 7, 458734, 327682, 7, 524270, 327682, 7, 589806, 327682, 7, 65519, 327682, 7, 131055, 327682, 7, 196591, 327682, 7, 262127, 327682, 7, 327663, 327682, 7, 393199, 327682, 7, 458735, 327682, 7, 524271, 327682, 7, 589807, 327682, 7, 65520, 327682, 7, 131056, 327682, 7, 196592, 327682, 7, 262128, 327682, 7, 327664, 327682, 7, 393200, 327682, 7, 458736, 327682, 7, 524272, 327682, 7, 589808, 327682, 7, 65521, 327682, 7, 131057, 327682, 7, 196593, 327682, 7, 262129, 327682, 7, 327665, 327682, 7, 393201, 327682, 7, 458737, 327682, 7, 524273, 327682, 7, 589809, 327682, 7, 65522, 327682, 7, 131058, 327682, 7, 196594, 327682, 7, 262130, 327682, 7, 327666, 327682, 7, 393202, 327682, 7, 458738, 327682, 7, 524274, 327682, 7, 589810, 327682, 7, 65523, 327682, 7, 131059, 327682, 7, 196595, 327682, 7, 262131, 327682, 7, 327667, 327682, 7, 393203, 327682, 7, 458739, 327682, 7, 524275, 327682, 7, 589811, 327682, 7, 65524, 327682, 7, 131060, 327682, 7, 196596, 327682, 7, 262132, 327682, 7, 327668, 327682, 7, 393204, 327682, 7, 458740, 327682, 7, 524276, 327682, 7, 589812, 327682, 7, 65525, 327682, 7, 131061, 327682, 7, 196597, 327682, 7, 262133, 327682, 7, 327669, 327682, 7, 393205, 327682, 7, 458741, 327682, 7, 524277, 327682, 7, 589813, 327682, 7, 65526, 327682, 7, 131062, 327682, 7, 196598, 327682, 7, 262134, 327682, 7, 327670, 327682, 7, 393206, 327682, 7, 458742, 327682, 7, 524278, 327682, 7, 589814, 327682, 7, 65527, 327682, 7, 131063, 327682, 7, 196599, 327682, 7, 262135, 327682, 7, 327671, 327682, 7, 393207, 327682, 7, 458743, 327682, 7, 524279, 327682, 7, 589815, 327682, 7, 65528, 327682, 7, 131064, 327682, 7, 196600, 327682, 7, 262136, 327682, 7, 327672, 327682, 7, 393208, 327682, 7, 458744, 327682, 7, 524280, 327682, 7, 589816, 327682, 7, 65529, 327682, 7, 131065, 327682, 7, 196601, 327682, 7, 262137, 327682, 7, 327673, 327682, 7, 393209, 327682, 7, 458745, 327682, 7, 524281, 327682, 7, 589817, 327682, 7, 65530, 327682, 7, 131066, 327682, 7, 196602, 327682, 7, 262138, 327682, 7, 327674, 327682, 7, 393210, 327682, 7, 458746, 327682, 7, 524282, 327682, 7, 589818, 327682, 7, 65531, 327682, 7, 131067, 327682, 7, 196603, 327682, 7, 262139, 327682, 7, 327675, 327682, 7, 393211, 327682, 7, 458747, 327682, 7, 524283, 327682, 7, 589819, 327682, 7, 65532, 327682, 7, 131068, 327682, 7, 196604, 327682, 7, 262140, 327682, 7, 327676, 327682, 7, 393212, 327682, 7, 458748, 327682, 7, 524284, 327682, 7, 589820, 327682, 7, 65533, 327682, 7, 131069, 327682, 7, 196605, 327682, 7, 262141, 327682, 7, 327677, 327682, 7, 393213, 327682, 7, 458749, 327682, 7, 524285, 327682, 7, 589821, 327682, 7, 65534, 327682, 7, 131070, 327682, 7, 196606, 327682, 7, 262142, 327682, 7, 327678, 327682, 7, 393214, 327682, 7, 458750, 327682, 7, 524286, 327682, 7, 589822, 327682, 7, 65535, 327682, 7, 131071, 327682, 7, 196607, 327682, 7, 262143, 327682, 7, 327679, 327682, 7, 393215, 327682, 7, 458751, 327682, 7, 524287, 327682, 7, 589823, 327682, 7, 0, 327682, 7, 65536, 327682, 7, 131072, 327682, 7, 196608, 327682, 7, 262144, 327682, 7, 327680, 327682, 7, 393216, 327682, 7, 458752, 327682, 7, 524288, 327682, 7, 1, 327682, 7, 65537, 327682, 7, 131073, 327682, 7, 196609, 327682, 7, 262145, 327682, 7, 327681, 327682, 7, 393217, 327682, 7, 458753, 327682, 7, 524289, 327682, 7, 2, 327682, 7, 65538, 327682, 7, 131074, 327682, 7, 196610, 327682, 7, 262146, 327682, 7, 327682, 327682, 7, 393218, 327682, 7, 458754, 327682, 7, 524290, 327682, 7, 3, 327682, 7, 65539, 327682, 7, 131075, 327682, 7, 196611, 327682, 7, 262147, 327682, 7, 327683, 327682, 7, 393219, 327682, 7, 458755, 327682, 7, 524291, 327682, 7, 4, 327682, 7, 65540, 327682, 7, 131076, 327682, 7, 196612, 327682, 7, 262148, 327682, 7, 327684, 327682, 7, 393220, 327682, 7, 458756, 327682, 7, 524292, 327682, 7, 5, 327682, 7, 65541, 327682, 7, 131077, 327682, 7, 196613, 327682, 7, 262149, 327682, 7, 327685, 327682, 7, 393221, 327682, 7, 458757, 327682, 7, 524293, 327682, 7, 6, 327682, 7, 65542, 327682, 7, 131078, 327682, 7, 196614, 327682, 7, 262150, 327682, 7, 327686, 327682, 7, 393222, 327682, 7, 458758, 327682, 7, 524294, 327682, 7, 7, 327682, 7, 65543, 327682, 7, 131079, 327682, 7, 196615, 327682, 7, 262151, 327682, 7, 327687, 327682, 7, 393223, 327682, 7, 458759, 327682, 7, 524295, 327682, 7, 8, 327682, 7, 65544, 327682, 7, 131080, 327682, 7, 196616, 327682, 7, 262152, 327682, 7, 327688, 327682, 7, 393224, 327682, 7, 458760, 327682, 7, 524296, 327682, 7, 9, 327682, 7, 65545, 327682, 7, 131081, 327682, 7, 196617, 327682, 7, 262153, 327682, 7, 327689, 327682, 7, 393225, 327682, 7, 458761, 327682, 7, 524297, 327682, 7, 10, 327682, 7, 65546, 327682, 7, 131082, 327682, 7, 196618, 327682, 7, 262154, 327682, 7, 327690, 327682, 7, 393226, 327682, 7, 458762, 327682, 7, 524298, 327682, 7, 11, 327682, 7, 65547, 327682, 7, 131083, 327682, 7, 196619, 327682, 7, 262155, 327682, 7, 327691, 327682, 7, 393227, 327682, 7, 458763, 327682, 7, 524299, 327682, 7, 12, 327682, 7, 65548, 327682, 7, 131084, 327682, 7, 196620, 327682, 7, 262156, 327682, 7, 327692, 327682, 7, 393228, 327682, 7, 458764, 327682, 7, 524300, 327682, 7, 13, 327682, 7, 65549, 327682, 7, 131085, 327682, 7, 196621, 327682, 7, 262157, 327682, 7, 327693, 327682, 7, 393229, 327682, 7, 458765, 327682, 7, 524301, 327682, 7, 14, 327682, 7, 65550, 327682, 7, 131086, 327682, 7, 196622, 327682, 7, 262158, 327682, 7, 327694, 327682, 7, 393230, 327682, 7, 458766, 327682, 7, 524302, 327682, 7, 15, 327682, 7, 65551, 327682, 7, 131087, 327682, 7, 196623, 327682, 7, 262159, 327682, 7, 327695, 327682, 7, 393231, 327682, 7, 458767, 327682, 7, 524303, 327682, 7, 16, 327682, 7, 65552, 327682, 7, 131088, 327682, 7, 196624, 327682, 7, 262160, 327682, 7, 327696, 327682, 7, 393232, 327682, 7, 458768, 327682, 7, 524304, 327682, 7, 17, 327682, 7, 65553, 327682, 7, 131089, 327682, 7, 196625, 327682, 7, 262161, 327682, 7, 327697, 327682, 7, 393233, 327682, 7, 458769, 327682, 7, 524305, 327682, 7, 18, 327682, 7, 65554, 327682, 7, 131090, 327682, 7, 196626, 327682, 7, 262162, 327682, 7, 327698, 327682, 7, 393234, 327682, 7, 458770, 327682, 7, 524306, 327682, 7, 19, 327682, 7, 65555, 327682, 7, 131091, 327682, 7, 196627, 327682, 7, 262163, 327682, 7, 327699, 327682, 7, 393235, 327682, 7, 458771, 327682, 7, 524307, 327682, 7, 20, 327682, 7, 65556, 327682, 7, 131092, 327682, 7, 196628, 327682, 7, 262164, 327682, 7, 327700, 327682, 7, 393236, 327682, 7, 458772, 327682, 7, 524308, 327682, 7, 21, 327682, 7, 65557, 327682, 7, 131093, 327682, 7, 196629, 327682, 7, 262165, 327682, 7, 327701, 327682, 7, 393237, 327682, 7, 458773, 327682, 7, 524309, 327682, 7, 22, 327682, 7, 65558, 327682, 7, 131094, 327682, 7, 196630, 327682, 7, 262166, 327682, 7, 327702, 327682, 7, 393238, 327682, 7, 458774, 327682, 7, 524310, 327682, 7, 23, 327682, 7, 65559, 327682, 7, 131095, 327682, 7, 196631, 327682, 7, 262167, 327682, 7, 327703, 327682, 7, 393239, 327682, 7, 458775, 327682, 7, 524311, 327682, 7, 24, 327682, 7, 65560, 327682, 7, 131096, 327682, 7, 196632, 327682, 7, 262168, 327682, 7, 327704, 327682, 7, 393240, 327682, 7, 458776, 327682, 7, 524312, 327682, 7, 25, 327682, 7, 65561, 327682, 7, 131097, 327682, 7, 196633, 327682, 7, 262169, 327682, 7, 327705, 327682, 7, 393241, 327682, 7, 458777, 327682, 7, 524313, 327682, 7, 26, 327682, 7, 65562, 327682, 7, 131098, 327682, 7, 196634, 327682, 7, 262170, 327682, 7, 327706, 327682, 7, 393242, 327682, 7, 458778, 327682, 7, 524314, 327682, 7, 27, 327682, 7, 65563, 327682, 7, 131099, 327682, 7, 196635, 327682, 7, 262171, 327682, 7, 327707, 327682, 7, 393243, 327682, 7, 458779, 327682, 7, 524315, 327682, 7, 28, 327682, 7, 65564, 327682, 7, 131100, 327682, 7, 196636, 327682, 7, 262172, 327682, 7, 327708, 327682, 7, 393244, 327682, 7, 458780, 327682, 7, 524316, 327682, 7, 29, 327682, 7, 65565, 327682, 7, 131101, 327682, 7, 196637, 327682, 7, 262173, 327682, 7, 327709, 327682, 7, 393245, 327682, 7, 458781, 327682, 7, 524317, 327682, 7, 30, 327682, 7, 65566, 327682, 7, 131102, 327682, 7, 196638, 327682, 7, 262174, 327682, 7, 327710, 327682, 7, 393246, 327682, 7, 458782, 327682, 7, 524318, 327682, 7, 31, 327682, 7, 65567, 327682, 7, 131103, 327682, 7, 196639, 327682, 7, 262175, 327682, 7, 327711, 327682, 7, 393247, 327682, 7, 458783, 327682, 7, 524319, 327682, 7, 32, 327682, 7, 65568, 327682, 7, 131104, 327682, 7, 196640, 327682, 7, 262176, 327682, 7, 327712, 327682, 7, 393248, 327682, 7, 458784, 327682, 7, 524320, 327682, 7, 33, 327682, 7, 65569, 327682, 7, 131105, 327682, 7, 196641, 327682, 7, 262177, 327682, 7, 327713, 327682, 7, 393249, 327682, 7, 458785, 327682, 7, 524321, 327682, 7, 34, 327682, 7, 65570, 327682, 7, 131106, 327682, 7, 196642, 327682, 7, 262178, 327682, 7, 327714, 327682, 7, 393250, 327682, 7, 458786, 327682, 7, 524322, 327682, 7, 35, 327682, 7, 65571, 327682, 7, 131107, 327682, 7, 196643, 327682, 7, 262179, 327682, 7, 327715, 327682, 7, 393251, 327682, 7, 458787, 327682, 7, 524323, 327682, 7, 655337, 327682, 7, 655338, 327682, 7, 655339, 327682, 7, 655340, 327682, 7, 655341, 327682, 7, 655342, 327682, 7, 655343, 327682, 7, 655344, 327682, 7, 655345, 327682, 7, 655346, 327682, 7, 655347, 327682, 7, 655348, 327682, 7, 655349, 327682, 7, 655350, 327682, 7, 655351, 327682, 7, 655352, 327682, 7, 655353, 327682, 7, 655354, 327682, 7, 655355, 327682, 7, 655356, 327682, 7, 655357, 327682, 7, 655358, 327682, 7, 655359, 327682, 7, 589824, 327682, 7, 589825, 327682, 7, 589826, 327682, 7, 589827, 327682, 7, 589828, 327682, 7, 589829, 327682, 7, 589830, 327682, 7, 589831, 327682, 7, 589832, 327682, 7, 589833, 327682, 7, 589834, 327682, 7, 589835, 327682, 7, 589836, 327682, 7, 589837, 327682, 7, 589838, 327682, 7, 589839, 327682, 7, 589840, 327682, 7, 589841, 327682, 7, 589842, 327682, 7, 589843, 327682, 7, 589844, 327682, 7, 589845, 327682, 7, 589846, 327682, 7, 589847, 327682, 7, 589848, 327682, 7, 589849, 327682, 7, 589850, 327682, 7, 589851, 327682, 7, 589852, 327682, 7, 589853, 327682, 7, 589854, 327682, 7, 589855, 327682, 7, 589856, 327682, 7, 589857, 327682, 7, 589858, 327682, 7, 589859, 327682, 7)
layer_1/name = "Object"
layer_1/tile_data = PackedInt32Array()

[node name="Debuger" type="Node" parent="."]
script = ExtResource("2_84kal")

[node name="Player" parent="." instance=ExtResource("2_l5a8p")]
position = Vector2(469, 1294)

[node name="Enemy" parent="." instance=ExtResource("5_t1ymi")]
position = Vector2(4468, 1671)

[node name="RelifePoint" parent="." instance=ExtResource("4_f4kq8")]
position = Vector2(589, 1312)

[node name="SpawnPoint" type="Node2D" parent="RelifePoint"]

[node name="Point1" type="Marker2D" parent="RelifePoint/SpawnPoint"]
position = Vector2(-6008, -1092)

[node name="Point2" type="Marker2D" parent="RelifePoint/SpawnPoint"]
position = Vector2(-6029, 2461)

[node name="Point3" type="Marker2D" parent="RelifePoint/SpawnPoint"]
position = Vector2(7880, 2547)

[node name="Point4" type="Marker2D" parent="RelifePoint/SpawnPoint"]
position = Vector2(7819, -1041)

[node name="EnemyHome" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("4_22mer")

[node name="SaveTimer" type="Timer" parent="."]
autostart = true
script = ExtResource("9_v08bh")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_iavjm")

[node name="Hud" parent="." instance=ExtResource("5_07fkt")]

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("10_5aanf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1644.75, -207)
shape = SubResource("RectangleShape2D_6qxva")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1644.75, 4581)
shape = SubResource("RectangleShape2D_6qxva")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-6190, 2202)
shape = SubResource("RectangleShape2D_m7j67")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Area2D"]
position = Vector2(9479, 2161)
shape = SubResource("RectangleShape2D_m7j67")

[node name="Wheathers" type="Node2D" parent="."]
